--- a/angular.json
+++ b/angular.json
@@ -69,6 +69,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "portfolio:build",
+            "port":3000
+          },
           "configurations": {
             "production": {
               "browserTarget": "portfolio:build:production"
