--- a/angular.json
+++ b/angular.json
@@ -103,7 +103,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           }
         }
       }
