--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "angular": "^1.8.3",
+    "ng": "^0.0.0",
     "rxjs": "~7.4.0",
     "three": "^0.137.5",
     "tslib": "^2.3.0",
