--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.1.3",
     "@angular/router": "^15.1.3",
     "angular": "^1.8.3",
+    "animate.css": "^4.1.1",
     "ng": "^0.0.0",
     "rxjs": "~7.4.0",
     "three": "^0.137.5",
